# datapane

./: .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  NOTICE  README.md  Taskfile.yml  datapane.code-workspace  environment.yaml  mypi.ini  mypy.ini  pyproject.toml  pytest.ini  renovate.json5
docs/: .gitattributes  .gitignore  README.md  Taskfile.yml  clear-notebook-output.sh  mkdocs.yml  nbbuild.sh  nbclear.sh  pyproject.toml
docs/docs/: README.md  index.ipynb  index.md  jupyter-integration.ipynb  mkdocs.yml  quickstart.ipynb  releasenotes.md
docs/docs/catalogs/blocks/: attachment.ipynb  bignumber.ipynb  datatable.ipynb  embed.ipynb  group.ipynb  html.ipynb  index.ipynb  media.ipynb  netflix_stock_data.csv  plot.ipynb  select.ipynb  table.ipynb  text.ipynb
docs/docs/catalogs/components/: calendar-heatmap.ipynb  index.ipynb
docs/docs/catalogs/templates/: index.ipynb
docs/docs/catalogues/: index.ipynb
docs/docs/catalogues/blocks/: attachment.ipynb  big-number.ipynb  bignumber.ipynb  code.ipynb  data-table.ipynb  datatable.ipynb  divider.ipynb  embed.ipynb  formula.ipynb  group.ipynb  html.ipynb  index.ipynb  map.ipynb  media.ipynb  page.ipynb  plot.ipynb  select.ipynb  table.ipynb  text.ipynb  toggle.ipynb
docs/docs/catalogues/components/: calendar-heatmap.ipynb  index.ipynb  timeline.ipynb
docs/docs/catalogues/templates/: index.ipynb
docs/docs/concepts/: blocks.ipynb  datapane-jl.ipynb  datapane.md  reports.ipynb  support-policy.md
docs/docs/concepts/datapane-enterprise/: authentication-and-sharing.md  deployment-and-hosting.md  index.md
docs/docs/concepts/datapane-teams/: authentication-and-sharing.md  deployment-and-hosting.md  index.md  managing-users.md
docs/docs/css/: extra.css
docs/docs/docs/concepts/: index.md
docs/docs/docs/stylesheets/: extra.css
docs/docs/guides/: adding-interactive-filters-to-plots.ipynb  how-to-do-something.md
docs/docs/guides/accessing-data-in-python/: accessing-data-in-python.ipynb  population-by-country.csv  shopping_list.txt  top_queries.csv
docs/docs/guides/adding-interactive-filters-to-plots/: adding-interactive-filters-to-plots.ipynb  covid_19_clean_complete.csv
docs/docs/guides/example-gallery/: dashboard-with-rows-and-columns.md  multiple-pages.md  rich-media.md  simple-one-pager.md  tabs-and-dropdowns.md
docs/docs/guides/sentiment-analysis-for-textual-data/: sentiment-analysis-for-textual-data.ipynb
docs/docs/js/: extra.js
docs/docs/stylesheets/: extra.css
docs/docs/tutorials/: blocks.ipynb  layout-and-customization.ipynb  media-attachments-and-embeds.ipynb  plots-and-visualizations.ipynb  tables-and-data.ipynb  text-code-and-html.ipynb
docs/docs/tutorials/apps/: configuration-and-dependencies.md  database-and-network-access.md  index.ipynb  index.md  scheduling.md  variables.ipynb  variables.md
docs/docs/tutorials/automation/: index.md
docs/docs/tutorials/basics/: create-a-report.ipynb  create-an-app.ipynb  install-datapane.md
docs/docs/tutorials/blocks/: index.ipynb  layout-and-customization.ipynb  media-attachments-and-embeds.ipynb  netflix_stock_data.csv  plots-and-visualizations.ipynb  tables-and-data.ipynb  text-code-and-html.ipynb
docs/docs/tutorials/datapane-cloud/: app-visibility.ipynb  authenticate-datapane.ipynb  embedding.ipynb  files.md  index.md  managing-members.md  projects.md  report-notifications.ipynb  report-visibility.ipynb  sharing.ipynb  upload-a-report-to-datapane-cloud.ipynb  upload-an-app-to-datapane-cloud.ipynb
docs/docs/tutorials/datapane-enterprise/: app-notifications.ipynb  authenticate-datapane.ipynb  files.md  index.md  managing-members.md  report-notifications.ipynb
docs/docs/tutorials/styling/: adding-source-code.ipynb  global-styling.md  index.ipynb  index.md  styling.ipynb  styling.md
docs/dpdocsutils/: setup.py
docs/dpdocsutils/dpdocsutils/: preamble.py  previews.py
projects/python-client/: .flake8  .gitignore  README.md  Taskfile.yml  pyproject.toml  pytest.ini
projects/python-client/src/datapane/: __init__.py
projects/python-client/tests/: __init__.py  conftest.py  cypress_setup.py
projects/python-client/tests/client/: test_config.py
projects/python-client/tests/cypress_test_app/: dp_test_cypress.py  dp_test_cypress_noparams.py
projects/python-client/tests/resources/: sample_parameters.json
projects/python-client/tests/runner/: test_runner.py
projects/python-client/tests_toplevel/: test_config.py
public-docs/: .gitattributes  .gitignore  README.md  Taskfile.yml  clear-notebook-output.sh  mkdocs.yml  nbbuild.sh  nbclear.sh  pyproject.toml
public-docs/docs/: cookbook.md  examples.md  index.ipynb  index.md  install-datapane.md  installing-datapane.md  jupyter-integration.ipynb  mkdocs.yml  pyproject.toml  quickstart.ipynb  releasenotes.md
public-docs/docs/apps/: advanced.md  blocks.md  deployment.md  example.md  functions-controls.md  overview.md  updates.md
public-docs/docs/blocks/: display-blocks.ipynb  layout-blocks.ipynb  overview.ipynb
public-docs/docs/catalogs/blocks/: attachment.ipynb  bignumber.ipynb  code.ipynb  datatable.ipynb  embed.ipynb  formula.ipynb  group.ipynb  html.ipynb  map.ipynb  (+6 more)
public-docs/docs/catalogues/: index.ipynb
public-docs/docs/concepts/: reports.ipynb
public-docs/docs/deployment/: deployed_apps.md  local_apps.md  sharing_reports.md
public-docs/docs/features/: display_blocks.ipynb  layout_blocks.ipynb  reports.ipynb  styling.ipynb
public-docs/docs/guides/: sentiment-analysis-for-textual-data.ipynb
public-docs/docs/misc/: cookbook.md  examples.md  quickstart.ipynb
public-docs/docs/reference/: reports.md
public-docs/docs/reports/: jupyter-integration.ipynb  overview.ipynb  styling.ipynb
public-docs/docs/static/: extra.css  extra.js
public-docs/docs/stylesheets/: extra.css
public-docs/docs/tutorials/: blocks.ipynb  netflix_stock_data.csv  plots-and-visualizations.ipynb  tables-and-data.ipynb
public-docs/dpdocsutils/: setup.py
public-docs/dpdocsutils/dpdocsutils/: preamble.py  previews.py
(+1742 files in other folders)
