[tool.poetry]
name = "datapane"
version = "0.9.2"
description = "Datapane client library and CLI tool"
authors = ["Datapane Team <dev@datapane.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://www.datapane.com"
repository = "https://www.github/datapane/datapane"
documentation = "https://docs.datapane.com"


keywords = ["data", "analysis", "jupyter", "pandas", "altair"]
classifiers = [
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]

#packages = [
#    { include = "datapane", from = "src" }
#]

# extra files (allows overriding gitignore)
include = ["NOTICE"] #"README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.6.1"
dataclasses = {version = "0.7", python = "~3.6.1"}
#python = ">=3.6.1, < 4.0.0"
#dataclasses = { version="^0.7", python=">=3.6.0, <3.7" }

# DS
numpy = "^1.18.0"
pandas = "^1.0.1"
pyarrow = "^2.0.0"

# viz
matplotlib = "^3.1.0"
altair = "^4.0.0"
# hardcoded to 2.0 atm due to parcel bundling bugs
bokeh = "2.0.0"
# we need to stick to 6.0.x until we drop py 3.6 support
nbconvert = "6.0.*"
plotly = "^4.8.1"
folium = "0.11.*"
# ipython = "^7.7.0" # needed for nbconvert?

# misc
dacite = "^1.5.0"
colorlog = "^4.1.0"
munch = "^2.5.0"
stringcase = "^1.2.0"
PyYAML = "^5.3.0"
packaging = "^20.3"

# CLI
click = "^7.0.0"
click-spinner = "^0.1.8"
# httpx = "^0.7.5"
"ruamel.yaml" = "^0.16.5"
requests = "^2.20.0"
validators = "^0.18.0"
jinja2 = "^2.11.1"
jsonschema = "^3.2.0"
tabulate = "^0.8.7"
# TODO - check for appdir releases
# appdirs = "^1.4.3"
toolz = "^0.11.1"
flit-core = "~3.0.0"
importlib_resources = "^3.0.0"
lxml = "^4.5.2"
requests-toolbelt = "^0.9.1"
furl = "^2.1.0"
bleach = "^3.2.1"
glom = "^20.11.0"
boltons = "^20.2.1"
dominate = "^2.4.0"  # latest on conda
micawber = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-datadir = "^1.3.1"
jupyterlab = "^2.1.2"
openpyxl = "^3.0.3"
pytest-timeout = "^1.3.4"
poetry2conda = "^0.3.0"
pdoc3 = "^0.9.1"

[tool.poetry.scripts]
datapane = "datapane.client.__main__:main"
dp-runner = "datapane.runner.__main__:main"

# Conda support
[tool.poetry2conda]
name = "datapane"

[tool.poetry2conda.dependencies]
pyarrow = { channel = "conda-forge" }

[tool.black]
line-length = 120
target-version = ['py38']

# FOR PEP-517/518
[build-system]
requires = ["poetry>=1.0.0,<1.1.0"]
build-backend = "poetry.masonry.api"
