[tool.poetry]
name = "datapane-docs-beta"
version = "0.1.0"
description = "Datapane Docs"
authors = ["Datapane <info@datapane.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11.0"
jupyterlab = "^3.4.3"
mkdocs-material = "^8.3.7"
mknotebooks = "^0.7.1"
pyppeteer = "^1.0.2"
datapane = "^0.14.0"
nest-asyncio = "^1.5.5"
dpdocsutils = {path = "dpdocsutils"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
