[tool.poetry]
name = "datapane-docs-beta"
version = "0.1.0"
description = "Datapane Docs"
authors = ["Datapane <info@datapane.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11.0"
datapane = {path = "/Users/shahin/Documents/datapane-hosted/datapane"} # until next release
jupyterlab = "^3.4.3"
mkdocs-material = "^8.3.7"
mknotebooks = "^0.7.1"
pyppeteer = "^1.0.2"
nest-asyncio = "^1.5.5"
dpdocsutils = {path = "dpdocsutils"}
altair = "^4.0.0"
vega-datasets = ">=0.9.0,<1.0.0"
matplotlib = "^3.0.0"
plotly = ">=4.0.0,<6.0.0"
bokeh = "2.2" # next release: bokeh = "~2.4.2"
folium = "0.12.*"
plotapi = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
