[tool.poetry]
name = "datapane-docs-beta"
version = "0.1.0"
description = "Datapane Docs"
authors = ["Datapane <info@datapane.com>"]

[tool.poetry.dependencies]
pyarrow = ">=6.0.0, < 7.0.0"
python = ">=3.10,<3.11.0"
jupyterlab = "^3.4.3"
mkdocs-material = "^8.3.7"
mknotebooks = "^0.7.1"
pyppeteer = "^1.0.2"
nest-asyncio = "^1.5.5"
dpdocsutils = {path = "dpdocsutils"}
altair = "^4.0.0"
vega-datasets = ">=0.9.0,<1.0.0"
matplotlib = "^3.0.0"
plotly = ">=4.0.0,<6.0.0"
bokeh = "~2.4.2"
folium = "0.12.*"
plotapi = "^5.0.0"
seaborn = "^0.11.2"
datapane = { path = "/Users/shahin/Documents/datapane-hosted/datapane/dist/datapane-0.14.0-py3-none-any.whl", develop = true }
openpyxl = "^3.0.10"
SQLAlchemy = "^1.4.39"
pandas-datareader = "^0.10.0"
datacommons = "^1.4.3"
datacommons-pandas = "^0.0.3"
pytrends = "^4.8.0"
nltk = "^3.7"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
