[tool.poetry]
name = "datapane-docs-beta"
version = "0.1.0"
description = "Datapane Docs"
authors = ["Datapane <info@datapane.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12.0"
datapane = { path = "../python-client", develop = true, extras= ["plotting"] }

# mkdocs
mkdocs-redirects = "^1.2.0"
mkdocstrings = {version = "^0.23.0", extras = ["python"]}
mkdocs-material = "^9.2.0"
mknotebooks = "^0.8.0"

# DS helpers
jupyterlab = "^3.4.3"
seaborn = "^0.11.2"
openpyxl = "^3.0.10"
SQLAlchemy = "^1.4.39"
pandas-datareader = "^0.10.0"
pytrends = "^4.8.0"
nltk = "^3.7"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry~=1.4.2"]
build-backend = "poetry.core.masonry.api"
